--- a/Bayesian/RejectionSampling/rejectionsampling.tex
+++ b/Bayesian/RejectionSampling/rejectionsampling.tex
@@ -36,7 +36,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={Computing Integrals Monte Carlo Way},
+  pdftitle={Rejection Sampling},
   pdfauthor={Rahul Goswami},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
@@ -103,7 +103,7 @@
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
 
-\title{Computing Integrals Monte Carlo Way}
+\title{Rejection Sampling}
 \author{Rahul Goswami}
 \date{18/01/2022}
 
@@ -211,7 +211,7 @@ then accept the sample 3. Generate another uniform random variable
 \end{Shaded}
 
 \begin{verbatim}
-## Acceptance Rate:  1.3135
+## Acceptance Rate:  1.323
 \end{verbatim}
 
 \begin{Shaded}
