--- a/Bayesian/RejectionSampling/rejectionsampling.tex
+++ b/Bayesian/RejectionSampling/rejectionsampling.tex
@@ -222,7 +222,7 @@ follows:
 \end{Shaded}
 
 \begin{verbatim}
-## Acceptance Rate:  1.3285
+## Acceptance Rate:  1.3123
 \end{verbatim}
 
 \begin{Shaded}
@@ -232,5 +232,9 @@ follows:
 \end{Shaded}
 
 \includegraphics{rejectionsampling_files/figure-latex/RejectionSampling-1.pdf}
+
+\begin{quote}
+Checkout my Blog on Rejection Sampling \href{www.iroblack.com}{Here}
+\end{quote}
 
 \end{document}
